# ws_thesis

.catkin_tools/profiles/default/: devel_collisions.txt
src/inzynier_v1/: CMakeLists.txt  package.xml
src/inzynier_v1/data/gazebo/worlds/: jar_cabinet_door_01.world  jar_cabinet_door_02.world  jar_cabinet_door_03.world  jar_cabinet_door_04.world  jar_cabinet_door_05.world  jar_cabinet_door_06.world  jar_cabinet_door_07.world  jar_cabinet_door_08.world  jar_cabinet_door_09.world  jar_cabinet_door_10.world  my_world.world  my_world_2.world  my_world_3.world  my_world_4.world  simple_test_world.world  test.world  velma_experiment.world
src/inzynier_v1/data/gazebo/worlds/velma_experiments_lab/: model.config  model.sdf
src/inzynier_v1/launch/: gazebo_client.launch  gazebo_world_editor.launch  octomap_offline.launch  projekt_1.launch  projekt_2.launch  velma_driver.launch  velma_sim_stero.launch  velma_system_stero.launch
src/inzynier_v1/map_scan/: doors_asym_scan.yaml  doors_sym_scan.yaml  example_scan.yaml
src/inzynier_v1/maps/: crappy_velma_map.bt.yaml  first_map.bt  my_world_2.bt  my_world_3.bt  simple_test_map.yaml
src/inzynier_v1/scripts/: go_home.py  hello_world  lab_1.py  octo_lab.py  project_1.py  projekt_2.py
src/simple_service/srv/: simple.srv
src/velma_experiments/: CMakeLists.txt  package.xml  plot_velocity.py
src/velma_experiments/data-raw/: simple-amcl-circle.csv  simple-amcl-long-line.csv  simple-amcl-square-const.csv  simple-amcl-square-rotation.csv  simple-laser-circle.csv  simple-laser-long-line.csv  simple-laser-square-const.csv  simple-laser-square-rotation.csv  simple-lasod-circle.csv  simple-lasod-long-line.csv  simple-lasod-square-const.csv  simple-lasod-square-rotation.csv  simple-lassolo-circle.csv  simple-lassolo-long-line.csv  simple-lassolo-square-const.csv  simple-lassolo-square-rotation.csv  simple-odom-circle.csv  simple-odom-long-line.csv  simple-odom-square-const.csv  simple-odom-square-rotation.csv
src/velma_experiments/launch/: localize_test.launch  move_and_record.launch  nav-test.launch  stereo-pair-test.launch
src/velma_experiments/scripts/: convert_data_to_plots.py  data_recorder.py  gather_move_base_data.py  localization_tests.py  localize_dump_data_to_csv.py  manual_localization_tests.py  process_localization.py  publish_pose.py
src/velma_mapping/: CMakeLists.txt  package.xml
src/velma_mapping/launch/: mapping.launch  navigate.launch  scan_matcher_test.launch  velma_thesis_planning.launch
src/velma_mapping/maps/: left_scanner_only_first.yaml  square_map.yaml  velma_testing_ground_correct.yaml
src/velma_mapping/octo_maps/: square_octo.bt
src/velma_mapping/scripts/: auto_lookaround.py  keyboard_move_node.py  localization_tests.py  move_around.py  simple_head_move.py
src/velma_mapping/src/: first_planner_test.cpp
src/velma_move_base/: CMakeLists.txt  package.xml
src/velma_move_base/config/: good-omnidir-teb-params.yaml
src/velma_move_base/launch/: velma_move_base.launch
src/velma_move_base/params/: common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/velma_move_base/scripts/: follow_base_with_head.py
src/velma_planning/: CMakeLists.txt  package.xml
src/velma_planning/config/dwa_planner/: correct_omni  dwa_params.yaml
src/velma_planning/config/eband/: EBandPlanner.cfg
src/velma_planning/config/omnidir/: costmap_common_params.yaml  simple_params.yaml  teb_local_planner_params.yaml
src/velma_planning/launch/: base_planner.launch
src/velma_planning/params/: global_costmap.yaml  global_planner.yaml  gmapping.yaml  local_costmap.yaml  local_planner.yaml
src/velma_planning/src/: main.cpp
src/velma_planning/srv/: make_plan.srv
